30627 Progress - Fix Controlled Vocabulary dropdown to appear/disappear on mouse hover/lead - Fix Controlled Vocabulary spacing and hover color to make it consistent with the rest

--- a/packages/dina-ui/components/button-bar/nav/nav.css
+++ b/packages/dina-ui/components/button-bar/nav/nav.css
@@ -5,8 +5,24 @@ body {
   color: #666666;
 }
 .dropdown:hover .dropdown-menu {
-  display: block;
   margin-top: -5px;
+}
+
+.submenu > button {
+  background-color: #ffffff;
+  border-color: #ffffff;
+  font-weight: 400;
+  color: #212529;
+  font-size: 1rem;
+  height: 31px;
+  padding: 0.25rem 1rem;
+}
+
+.submenu.show > .btn-light.dropdown-toggle {
+  background-color: #e9ecef;
+  border-color: #e9ecef;
+  font-weight: 400;
+  color: #212529;
 }
 
 .ftr-urlt-lnk li {
@@ -37,10 +53,4 @@ a.nav-link.dropdown-toggle:focus,
 }
 button.navbar-toggler {
   background-color: #fff;
-}
-
-.submenu-dropdown-button {
-  color: #000;
-  background-color: #fff;
-  border-color: #fff;
 }
